Updated for Practice 2

--- a/myfirstwebsite.html
+++ b/myfirstwebsite.html
@@ -10,19 +10,56 @@
     <h1>Hüsnü Tığrak</h1>
     <!--This is also a Header but smaller one-->
     <h3>About Me</h3>
+
+    <!--Picture is also a link-->
+    <a href="https://www.linkedin.com/in/husnutigrak/"
+      ><img
+        src="images/resmim.jpg"
+        alt="profilephoto"
+        title="This is me :)"
+        width="100px"
+    /></a>
     <p>
       <!--This is a paragraph which we mostly use for our writings-->
+
       Greetings.I am Hüsnü.Currently I am study at Patika+ fullstack developer
       bootcamp.We already learned coding with Java and Spring Boot !!! Now we
       are on frontend side of bootcamp.Goodluck all of my classmates ^_^
     </p>
 
     <h4>My Hobbies</h4>
-    <p>
-      Playing video games like
-      <strong>World of Warcraft , Knight Online , Healthstone , CSGO</strong
-      >.Also i follow these sports
-      <strong><i>Football,Basketball,Tenis,Formula 1.</i></strong>
-    </p>
+
+    <h4>1.Video Games</h4>
+    <ul>
+      <li>
+        <a href="https://worldofwarcraft.blizzard.com/en-us/"
+          >World of Warcraft</a
+        >
+      </li>
+      <li>Knight Online</li>
+      <li>Overwatch</li>
+    </ul>
+
+    <h4>2.Movies</h4>
+    <ul>
+      <li>
+        <a href="https://www.imdb.com/title/tt0120737/"
+          >The Lord of The Rings</a
+        >
+      </li>
+      <li>Matrix</li>
+      <li>Harry Potter</li>
+    </ul>
+
+    <h4>3.Books</h4>
+    <ul>
+      <li>
+        <a href="https://www.kitapyurdu.com/kitap/1984/13506.html"
+          >George Orwell 1984</a
+        >
+      </li>
+      <li>Das Capital</li>
+      <li>Machiavelli's Prince</li>
+    </ul>
   </body>
 </html>
