--- a/myfirstwebsite.html
+++ b/myfirstwebsite.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <style>
+      body {
+        background-color: antiquewhite;
+        font-family: Arial, sans-serif;
+      }
+
+      h1 {
+        font-size: 32px;
+        text-align: center;
+        margin-top: 50px;
+      }
+
+      .imgcontainer {
+        text-align: center;
+      }
+
+      h3 {
+        text-align: center;
+      }
+
+      .maindiv {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <!--This is a Header-->
@@ -12,54 +37,64 @@
     <h3>About Me</h3>
 
     <!--Picture is also a link-->
-    <a href="https://www.linkedin.com/in/husnutigrak/"
-      ><img
-        src="images/resmim.jpg"
-        alt="profilephoto"
-        title="This is me :)"
-        width="100px"
-    /></a>
-    <p>
-      <!--This is a paragraph which we mostly use for our writings-->
+    <div class="imgcontainer">
+      <a href="https://www.linkedin.com/in/husnutigrak/"
+        ><img
+          src="images/resmim.jpg"
+          alt="profilephoto"
+          title="This is me :)"
+          width="100px"
+      /></a>
+    </div>
 
-      Greetings.I am Hüsnü.Currently I am study at Patika+ fullstack developer
-      bootcamp.We already learned coding with Java and Spring Boot !!! Now we
-      are on frontend side of bootcamp.Goodluck all of my classmates ^_^
-    </p>
+    <div class="maindiv">
+      <p>
+        <!--This is a paragraph which we mostly use for our writings-->
 
-    <h4>My Hobbies</h4>
+        Greetings.I am Hüsnü.Currently I am study at Patika+ fullstack developer
+        bootcamp.We already learned coding with Java and Spring Boot !!! Now we
+        are on frontend side of bootcamp.Goodluck all of my classmates ^_^
+      </p>
 
-    <h4>1.Video Games</h4>
-    <ul>
-      <li>
-        <a href="https://worldofwarcraft.blizzard.com/en-us/"
-          >World of Warcraft</a
-        >
-      </li>
-      <li>Knight Online</li>
-      <li>Overwatch</li>
-    </ul>
+      <h4>My Hobbies</h4>
 
-    <h4>2.Movies</h4>
-    <ul>
-      <li>
-        <a href="https://www.imdb.com/title/tt0120737/"
-          >The Lord of The Rings</a
-        >
-      </li>
-      <li>Matrix</li>
-      <li>Harry Potter</li>
-    </ul>
+      <h4>1.Video Games</h4>
+      <ul>
+        <li>
+          <a href="https://worldofwarcraft.blizzard.com/en-us/"
+            >World of Warcraft</a
+          >
+        </li>
+        <li>Knight Online</li>
+        <li>Overwatch</li>
+      </ul>
 
-    <h4>3.Books</h4>
-    <ul>
-      <li>
-        <a href="https://www.kitapyurdu.com/kitap/1984/13506.html"
-          >George Orwell 1984</a
-        >
-      </li>
-      <li>Das Capital</li>
-      <li>Machiavelli's Prince</li>
-    </ul>
+      <h4>2.Movies</h4>
+      <ul>
+        <li>
+          <a href="https://www.imdb.com/title/tt0120737/"
+            >The Lord of The Rings</a
+          >
+        </li>
+        <li>Matrix</li>
+        <li>Harry Potter</li>
+      </ul>
+
+      <h4>3.Books</h4>
+      <ul>
+        <li>
+          <a href="https://www.kitapyurdu.com/kitap/1984/13506.html"
+            >George Orwell 1984</a
+          >
+        </li>
+        <li>Das Capital</li>
+        <li>Machiavelli's Prince</li>
+      </ul>
+
+      <p>
+        Belirli bir işlemi gerçekleştirmek için <kbd>Ctrl</kbd> +
+        <kbd>C</kbd> tuşlarına basın.
+      </p>
+    </div>
   </body>
 </html>
